--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,6 +1,32 @@
 //style.moudule.scss
+@keyframes popupIn {
+    0% {
+        opacity: 0;
+        transform: scale(0.5) translateY(50px);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+    }
+}
 
 .kalariLogo {
-    width: 300px;
-    height: 300px;
+    position: relative;
+    padding: auto;
+    width: 600px;
+    height: 600px;
+    background-color: rgba(228, 242, 242, 255);
+    border-radius: 50%;
+    animation: popupIn 0.8s ease-out forwards;
+}
+
+.kalariTitle {
+    font-family: "Rekesly Bold", serif;
+    font-size: 10rem;
+    font-weight: bold;
+    font-style: normal;
+
+    animation: popupIn 1s ease-out forwards;
+    animation-delay: 0.3s;
+    opacity: 0;
 }
